cluster/apps/observability/elasticsearch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
